Fix display numbers overflow

--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding-right: 16px;
+  padding: 16px;
+
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .display__value {
@@ -77,6 +80,7 @@ body {
   align-items: flex-end;
   font-size: 16px;
   color: #aaa;
+  min-height: 32px;
 }
 
 .buttons {
